[gd_scene load_steps=27 format=2]

[ext_resource path="res://Scripts/Effects/MachineParticles.gd" type="Script" id=1]
[ext_resource path="res://Resources/Particles/spark_05.png" type="Texture" id=2]
[ext_resource path="res://Resources/Particles/smoke_10.png" type="Texture" id=3]
[ext_resource path="res://Resources/Particles/spark_02.png" type="Texture" id=4]

[sub_resource type="SphereShape" id=1]
radius = 0.33

[sub_resource type="SpatialMaterial" id=2]
flags_transparent = true
flags_unshaded = true
vertex_color_use_as_albedo = true
params_blend_mode = 1
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_color = Color( 0.968627, 0.811765, 0.0862745, 1 )
albedo_texture = ExtResource( 2 )

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0.014, 0.794478 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
lifetime_randomness = 1.0
emission_shape = 2
emission_box_extents = Vector3( 2, 6, 1 )
gravity = Vector3( 0, 0, 0 )
angle = 360.0
angle_random = 1.0
scale = 2.0
scale_curve = SubResource( 4 )

[sub_resource type="QuadMesh" id=6]

[sub_resource type="SpatialMaterial" id=7]
flags_transparent = true
flags_unshaded = true
vertex_color_use_as_albedo = true
params_blend_mode = 1
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_color = Color( 0.47451, 0.231373, 0.862745, 1 )
albedo_texture = ExtResource( 4 )

[sub_resource type="ParticlesMaterial" id=8]
lifetime_randomness = 1.0
emission_shape = 1
emission_sphere_radius = 6.0
gravity = Vector3( 0, 0, 0 )
angle = 360.0
angle_random = 1.0
scale = 1.5
scale_random = 1.0

[sub_resource type="QuadMesh" id=9]

[sub_resource type="SpatialMaterial" id=10]
flags_transparent = true
flags_unshaded = true
vertex_color_use_as_albedo = true
params_blend_mode = 1
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_color = Color( 0.741176, 0.447059, 0.964706, 1 )
albedo_texture = ExtResource( 3 )

[sub_resource type="Curve" id=11]
min_value = -360.0
max_value = 360.0
_data = [ Vector2( 0.054, 335.706 ), 0.0, 218.291, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=12]
curve = SubResource( 11 )

[sub_resource type="ParticlesMaterial" id=13]
emission_shape = 2
emission_box_extents = Vector3( 0.01, 2, 0.01 )
gravity = Vector3( 0, 0, 0 )
angle = 720.0
angle_random = 1.0
angle_curve = SubResource( 12 )

[sub_resource type="QuadMesh" id=14]

[sub_resource type="SpatialMaterial" id=15]
flags_transparent = true
flags_unshaded = true
vertex_color_use_as_albedo = true
params_blend_mode = 1
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_texture = ExtResource( 4 )

[sub_resource type="Curve" id=16]
min_value = -360.0
max_value = 360.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.366, 360 ), 0.0, 0.0, 0, 0, Vector2( 0.71, 360 ), 0.0, 0.0, 0, 0, Vector2( 1, 185.521 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=17]
curve = SubResource( 16 )

[sub_resource type="ParticlesMaterial" id=18]
gravity = Vector3( 0, 0, 0 )
angle = 360.0
angle_random = 1.0
angle_curve = SubResource( 17 )

[sub_resource type="QuadMesh" id=19]

[sub_resource type="SpatialMaterial" id=20]
flags_transparent = true
flags_unshaded = true
vertex_color_use_as_albedo = true
params_blend_mode = 1
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_texture = ExtResource( 4 )

[sub_resource type="ParticlesMaterial" id=21]
gravity = Vector3( 0, 0, 0 )
angle = 360.0
angle_random = 1.0

[sub_resource type="QuadMesh" id=22]

[node name="RigidBody" type="RigidBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6.84481, -6.18554 )
mode = 1
mass = 20.0
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="Particles" type="Particles" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.12462, 0 )
visible = false
material_override = SubResource( 2 )
amount = 100
lifetime = 0.2
randomness = 0.5
process_material = SubResource( 5 )
draw_pass_1 = SubResource( 6 )

[node name="Particles2" type="Particles" parent="."]
visible = false
material_override = SubResource( 7 )
amount = 40
lifetime = 0.25
process_material = SubResource( 8 )
draw_pass_1 = SubResource( 9 )

[node name="Particles3" type="Particles" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -7.09989, 0.202042 )
visible = false
material_override = SubResource( 10 )
amount = 70
process_material = SubResource( 13 )
draw_pass_1 = SubResource( 14 )

[node name="Particles4" type="Particles" parent="."]
material_override = SubResource( 15 )
amount = 80
lifetime = 5.0
speed_scale = 0.5
process_material = SubResource( 18 )
draw_pass_1 = SubResource( 19 )

[node name="Particles5" type="Particles" parent="."]
material_override = SubResource( 20 )
amount = 80
lifetime = 5.0
speed_scale = 0.5
process_material = SubResource( 21 )
draw_pass_1 = SubResource( 22 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
